--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(186, 207, 207, 0.13)!important;
+    background-color: rgba(177, 202, 202, 0.13)!important;
     font-family: sans-serif;
     color: rgba(0, 8, 38, 0.8);
 }
@@ -7,6 +7,16 @@ body {
 header {
     background-color: white;
     border-bottom:  0.5px solid rgba(16, 17, 17, 0.13);
+}
+.info-logo {
+    display: inline;
+    text-align: center;
+    font-size: 15px;
+    margin: 20px 10px 0px 0px;
+    padding: 20px;
+}
+.info-logo p {
+    font-size: 13px;
 }
 
 .navbar {
@@ -49,7 +59,32 @@ header {
 /* FIM NAVBAR */
 
 
-.container-corpo{  
-    margin-top: 20px;
+h5{  
+    margin-top: 25px;
+    margin-bottom: 15px;
 
+}
+.card {
+    padding: 0;
+    width: 36em;
+    height: 10em;
+    border-radius: 10px;
+    border: hidden;
+
+}
+.card:hover {
+    color: rgb(231, 48, 94);
+    border: 1px solid;
+}
+
+.card .card-body > a {
+    color: rgba(0, 8, 38, 0.8)!important;
+    text-decoration: none;
+    
+}
+.card b span{
+    color: #E63888;
+    margin: 10px;
+    padding: 10px;
+    line-height: 4.0;
 }
